--- a/packages/base-gui.org
+++ b/packages/base-gui.org
@@ -75,3 +75,4 @@
 | pacman   | appmenu-gtk-module     | N.A.                                         | needed for the hud menu                                          |
 | git      | menus                  | https://github.com/Naheel-Azawy/menus        | just some menus                                                  |
 | suckless | dmenu                  | https://git.suckless.org/dmenu               | runs commands and provides a UI for selection                    |
+| pacman   | xorg-xsetroot          | N.A.                                         | root window parameter setting utility for X                      |
