--- a/packages/base-gui.org
+++ b/packages/base-gui.org
@@ -74,3 +74,4 @@
 | suckless | dmenu                  | https://git.suckless.org/dmenu            | runs commands and provides a UI for selection                    |
 | pacman   | xorg-xsetroot          | N.A.                                      | root window parameter setting utility for X                      |
 | pacman   | ntp                    | N.A.                                      | network time protocol                                            |
+| pacman   | perl-file-mimeinfo     | N.A.                                      | mimetype utils                                                   |
