--- a/packages/base-gui.org
+++ b/packages/base-gui.org
@@ -78,3 +78,4 @@
 | pacman   | network-manager-applet | N.A.                                      | handy nm gui applet                                              |
 | pacman   | openvpn                | N.A.                                      | the open vpn                                                     |
 | pacman   | networkmanager-openvpn | N.A.                                      | openvpn for nm                                                   |
+| aur      | networkmanager-dmenu   | N.A.                                      | manage nm from dmenu                                             |
