--- a/packages/base.org
+++ b/packages/base.org
@@ -54,4 +54,5 @@
 | pacman     | man                 | N.A.                                   | the manual                                                   |
 | pacman     | cmake               | N.A.                                   | needed to build some packages                                |
 | pacman     | mlocate             | N.A.                                   | find files quickly                                           |
-| pacman     | rsync               | N.A.                                   | synchronize files                          |
+| pacman     | rsync               | N.A.                                   | synchronize files                                            |
+| aur        | archivemount        | N.A.                                   | mount archives using fuse                                    |
