--- a/packages/devel.org
+++ b/packages/devel.org
@@ -1,5 +1,6 @@
 | Tag    | Name                          | Git Link                 | Purpose                                |
 |--------+-------------------------------+--------------------------+----------------------------------------|
+| pacman | man-pages                     | N.A.                     | manuals                                |
 | pacman | docker                        | N.A.                     | to run docker containers               |
 | pacman | vala                          | N.A.                     | Vala language                          |
 | aur    | android-studio                | N.A.                     | Android studio IDE                     |
