--- a/README.org
+++ b/README.org
@@ -11,11 +11,11 @@
    - st
    - [[https://github.com/Naheel-Azawy/fmz][fmz]]
    - tmux everywhere ([[https://github.com/Naheel-Azawy/theterm][theterm]])
-   - bspwm
+   - i3/bspwm?
    - lemonbar
-   - [[https://github.com/Naheel-Azawy/sxiv][sxiv]] (custom fork)
+   - [[https://github.com/Naheel-Azawy/mpv-config][mpv]]/[[https://github.com/Naheel-Azawy/sxiv][sxiv]]? (custom fork)
    - mpd and ncmpcpp
-   - brave/chromium/firefox
+   - brave/chromium/firefox?
    - bunch of other stuff
 
 ** Install
